# soroban-ops-cookbook

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
account-policies/: README.md
account-policies/contract-allowlist/: Cargo.toml  README.md
account-policies/contract-allowlist/src/: lib.rs
account-policies/rate-limit/: Cargo.toml  README.md
account-policies/rate-limit/src/: lib.rs
account-policies/spend-limit/src/: lib.rs
account-policies/spend-limit/test_snapshots/test/: rejects_amount_over_limit.1.json
agent-policies/: README.md
agent-policies/spend-limit/: Cargo.toml
agent-policies/spend-limit/src/: lib.rs
anchor-configs/: README.md  generate-config.js  package-lock.json  package.json
anchor-configs/templates/: docker-compose.template.yml  env.template
event-listeners/: README.md
event-listeners/postgres-sink/: Cargo.toml  README.md  docker-compose.yml
event-listeners/postgres-sink/src/: main.rs
event-listeners/webhook-relay/: Cargo.toml  README.md
event-listeners/webhook-relay/src/: main.rs
